Updated HTML, CSS, and JS files to get a somewhat working product.

--- a/index.html
+++ b/index.html
@@ -19,20 +19,22 @@
         <h2>Question that will be asked and changed throughout the quiz.</h2>
     </section><!-->
         
-    <div class="container">
-        <div id="question-container" class="hide">  
-        <div id="question">Question</div>    
-        <div id="answer-buttons" class="btn-grid">
+    <section class="container">
+        <section id="question-container" class="hide">  
+        <section id="question">Question</section>    
+        <section id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
-        </div>
-    </div>
-    <div class="controls">
-    <button id="start-btn" class="start-btn btn">Start</button>
-    <button id="next-btn" class="next-btn btn hide">Next</button>           
-</div>
+        </section>
+    </section>
+    <h3 id="start-text">Click start to begin the quiz</h3>
+        <section class="controls">
+        <button id="start-btn" class="start-btn btn">Start</button>
+        <button id="next-btn" class="next-btn btn hide">Next</button>
+        </section>           
+    </section>
 
 
 
