--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Quiz</title>
+  <title>General Knowledge Quiz</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -14,10 +14,6 @@
         <h1>View high scores</h1>
         <h1 id="timer">Time: </h1>
     </header>
-
-    <!--<section>
-        <h2>Question that will be asked and changed throughout the quiz.</h2>
-    </section><!-->
         
     <section class="container">
         
